<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/bg_friends"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginTop="5dp">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:tint="#FFF"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_back"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:onClick="onClickLanguageButton"
            android:text="En / ار"/>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cvTop"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/activity_margin"
        android:layout_below="@id/layoutToolbar"
        android:backgroundTint="@color/clr_purple">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/page3"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_course"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:textSize="18dp"
                android:textColor="#FFF"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_below="@+id/cvTop"
        android:id="@+id/cvMiddle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="#fff"
            android:id="@+id/ll" >

            <Button
                android:id="@+id/btnCourse1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/course_a"
                android:background="@drawable/button_selector_green"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="@color/clr_text_a"
                android:gravity="center"
                android:layout_alignTop="@+id/person_age"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/clr_line" />

            <Button
                android:id="@+id/btnCourse2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@drawable/button_selector_green"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:textColor="@color/clr_text_a"
                android:text="@string/course_b" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/clr_line" />

            <Button
                android:id="@+id/btnCourse3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/course_c"
                android:background="@drawable/button_selector_green"
                android:textColor="@color/clr_text_a"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:gravity="center" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/clr_line" />

            <Button
                android:id="@+id/btnCourse4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:background="@drawable/button_selector_green"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/clr_text_a"
                android:text="@string/course_d" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnResources"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/activity_margin"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:layout_below="@id/cvMiddle"
            android:background="#FFF"
            android:gravity="center"
            android:textColor="@color/clr_text_a"
            android:textAllCaps="false"
            android:text="@string/resources" />

        <Button
            android:id="@+id/btnChangeChallenge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:layout_below="@id/btnResources"
            android:background="#FFF"
            android:gravity="center"
            android:textColor="@color/clr_text_a"
            android:textAllCaps="false"
            android:text="@string/channge_challenge" />

    <Button
            android:id="@+id/btnFeedback"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:layout_below="@id/btnChangeChallenge"
            android:background="#FFF"
            android:gravity="center"
            android:textColor="@color/clr_text_a"
            android:textAllCaps="false"
            android:text="@string/feedback" />

</RelativeLayout>
