<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/bg_friends"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:tint="#FFF"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_back"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:onClick="onClickLanguageButton"
            android:text="En / ار"/>

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cvTop"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/activity_margin"
        android:layout_below="@id/layoutToolbar"
        android:backgroundTint="@color/clr_purple">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/page2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_challenge"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:textSize="18dp"
                android:textColor="#FFF"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_below="@+id/cvTop"
        android:id="@+id/cvMiddle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="#fff"
            android:id="@+id/ll" >

            <Button
                android:id="@+id/btnChall1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/chall_a"
                android:background="@drawable/button_selector_green"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="#404040"
                android:gravity="center"
                android:layout_alignTop="@+id/person_age"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/clr_line" />

            <Button
                android:id="@+id/btnChall2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@drawable/button_selector_green"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:textColor="#404040"
                android:text="@string/chall_b" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/clr_line" />

            <Button
                android:id="@+id/btnChall3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/chall_c"
                android:background="@drawable/button_selector_green"
                android:textColor="#404040"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:gravity="center" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/clr_line" />

            <Button
                android:id="@+id/btnChall4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:textSize="20sp"
                android:background="@drawable/button_selector_green"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="#404040"
                android:text="@string/chall_d" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/cvMiddle"
        android:background="#269a1d"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnIdentifyChall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#FFF"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#404040"
            android:textAllCaps="false"
            android:text="@string/identify_challenge" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:layout_alignParentRight="true"
            android:src="@drawable/question"/>
    </RelativeLayout>

</RelativeLayout>
